# AI-Brains

./: .claude  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  Phase-17-Remediation-Review.md  README.md  deny.toml  vault.db-shm
.agents/skills/ai-brains/: SKILL.md
.agents/skills/onboarding/: SKILL.md
.agents/skills/orchestrator-workflow/: skill.md
.claude/: hooks.json
.claude/skills/ai-brains/: SKILL.md
.claude/skills/codex-review/: SKILL.md
.claude/skills/coding-core/: SKILL.md
.claude/skills/onboarding/: SKILL.md
.claude/skills/scripts-evaluator/: SKILL.md
.claude/skills/tooling/: SKILL.md
Docs/: ARCHITECTURE.md  Audit.md  Codex-Hooks-Research.md  Deviations.md  Gemini-CLI-hooks.md  Implementation-Plan.md  OPERATIONS.md  PRD.md  antigravity-rule.md  audit2.md  ci-tooling.md  claude-hooks.md  codex-hooks.md  hooks-status.md  hooks.md  status.md  status2.md
Docs/DECISIONS/: ADR-0009-graph-backend-replacement.md
Docs/archive/: Phase-17-Final-Closure-Review.md  Phase-17-Review.md  README.md  audit_report_integration.md
Docs/archives/: antigravity-memory-review.md
Docs/archives/tracks/: T03-json-contracts.md  T04-crypto-recovery.md  T06-store-projections.md  T10-capture-core.md  T12-cli-foundation.md  T13-cli-capture.md  T15-harness-gemini.md  T16-harness-codex.md  T24-raptor-crag.md  T26-retention-forget.md  T30-hardening-protocol.md
Docs/conductor/: conductor.md  failure-drills.md
Docs/conductor/trackT32/: spec.md
Docs/schemas/: agy-hook-payload.json  sync-pull-record.json
backups/: vault-2026-04-28T16-23-52.639348300+00-00.db.bak  vault-2026-05-10T19-01-41.922523400+00-00.db.bak
conductor/: conductor.md  plan.md  spec.md
conductor/tracks/: T01-core-domain.md  T05-store-event-log.md  T07-path-normalization.md  T09-security-scanning.md  T11-daemon-writer.md  T27-e2e-hardening.md  track031-onboarding-observability.md  track032-preflight-ansi-cleanup-dedup-condensation.md  track033-antigravity-conversation-import.md  track034-resilient-summarization-truncation.md  track035-cli-refactor.md  track036-cli-polish-workflow.md
crates/ai-brains-adapters/: Cargo.toml
crates/ai-brains-adapters/src/: agy.rs  antigravity.rs  errors.rs  lib.rs
crates/ai-brains-adapters/tests/: agy_parsing.rs  antigravity_manual_import.rs
crates/ai-brains-brain/: Cargo.toml
crates/ai-brains-brain/src/: backup.rs  conflict_detection.rs  embeddings.rs  feedback_loop.rs  lib.rs  memory_synthesis.rs  recipe_promotion.rs  retention.rs
crates/ai-brains-brain/tests/: conflicts_and_recipes.rs  cross_agent_synthesis.rs  nightly_summarizes_large_session.rs  nightly_summarizes_session.rs  raptor_synthesis.rs  retention_and_forget.rs
crates/ai-brains-capture/: Cargo.toml
crates/ai-brains-capture/src/: assistant_final.rs  command_handler.rs  errors.rs  malformed.rs  session_start.rs  user_prompt.rs
crates/ai-brains-capture/tests/: common.rs
crates/ai-brains-cli/: Cargo.toml
crates/ai-brains-cli/src/: context.rs  daemon_client.rs  hotspot.rs  live_graph.rs  main.rs
crates/ai-brains-cli/src/commands/: agy_hook.rs  antigravity_import.rs  backup.rs  context.rs  daemon.rs  forget.rs  graph.rs  ingest.rs  init.rs  mod.rs  nightly.rs  pin.rs  preflight.rs  project.rs  recall.rs  safety.rs  stop_session.rs  symbol_bridge.rs  sync.rs
crates/ai-brains-cli/tests/: cross_repo_bridge_smoke.rs  mapping_delta_smoke.rs  smoke.rs
crates/ai-brains-contracts/: Cargo.toml
crates/ai-brains-contracts/src/: bridge.rs  ingest.rs  lib.rs  recall.rs  response.rs
crates/ai-brains-contracts/tests/: api_response_shape.rs  bridge_record_shape.rs  ingest_request_shape.rs  preflight_response_shape.rs  structured_errors.rs
crates/ai-brains-core/: Cargo.toml
crates/ai-brains-core/src/: ids.rs  privacy.rs
crates/ai-brains-crypto/: Cargo.toml
crates/ai-brains-crypto/src/: data_key.rs  dpapi.rs  errors.rs  passphrase.rs
crates/ai-brains-events/: Cargo.toml
crates/ai-brains-events/src/: event_kind.rs  lib.rs  payload.rs
crates/ai-brains-git/: Cargo.toml
crates/ai-brains-graph/: Cargo.toml
crates/ai-brains-graph/src/: cozo_proxy.rs  ladybug.rs  lib.rs  multiplex.rs  projector.rs  queries.rs  rebuild.rs  schema.rs  sqlite_backend.rs  vault.rs
crates/ai-brains-graph/tests/: common.rs  projector_creates_project_session_memory_nodes.rs  rebuild_is_idempotent.rs  schema_initializes.rs
crates/ai-brains-retrieval/: Cargo.toml
crates/ai-brains-retrieval/src/: ansi.rs  lexical.rs  lib.rs  preflight.rs  recall.rs  semantic.rs  sessions.rs
crates/ai-brains-retrieval/tests/: common.rs  lexical_search_returns_memory.rs  preflight_deduplicates.rs  preflight_includes_active_sessions.rs  preflight_includes_session_turns.rs  preflight_strips_ansi.rs  preflight_under_1500_words.rs  privacy_filter_excludes_never_inject.rs  privacy_filter_excludes_sealed.rs  recall_returns_sources.rs
crates/ai-brains-store/: Cargo.toml
crates/ai-brains-store/migrations/: 0013_relational_graph.sql  0015_memory_project_id.sql  0016_provenance_tx_id.sql  0017_sync_state.sql  0018_memory_embedding.sql  0019_embedding_timestamp.sql
crates/ai-brains-store/src/: event_store.rs  fts.rs  lib.rs  migrations.rs  query_store.rs
crates/ai-brains-store/src/projections/: memory.rs  mod.rs  project.rs  recipe.rs  session.rs  turn.rs
crates/ai-brains-store/tests/: fts_indexes_memory.rs  projections_react_to_events.rs  projections_update_from_events.rs  replay_rebuilds_projections.rs
crates/ai-brainsd/: Cargo.toml
crates/ai-brainsd/src/: lib.rs  main.rs
crates/ai-brainsd/tests/: ping_pong_smoke.rs  single_writer_serializes_parallel_ingest.rs  spool_replays_after_restart.rs
scripts/: Build-AIBrains.ps1  Ingest-HermesVault.ps1  build.ps1  copy-hermes-script.ps1  dev-check.ps1  fixed-hook.ps1  ingest_hermes_vault.py  target-claude-hook.ps1  target-codex-hook.ps1  target-gemini-hook.ps1  update-path.ps1  update-settings.ps1
tracks/: T20-graph-projection.md  T21-model-providers.md  T22-nightly-summaries.md  T23-conflicts-recipes.md  T28-cross-agent-harness.md  T29-relational-graph.md
(+111 files in other folders)
