[package]
name = "ai-brains-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ai-brains"
path = "src/main.rs"

[dependencies]
ai-brains-adapters = { path = "../ai-brains-adapters" }
ai-brains-capture = { path = "../ai-brains-capture" }
ai-brains-contracts = { path = "../ai-brains-contracts" }
ai-brains-retrieval = { path = "../ai-brains-retrieval" }
ai-brains-store = { path = "../ai-brains-store" }
ai-brains-crypto = { path = "../ai-brains-crypto" }
ai-brains-models = { path = "../ai-brains-models" }
ai-brains-graph = { path = "../ai-brains-graph", optional = true }
serde_json.workspace = true
serde.workspace = true
clap = { version = "4.4", features = ["derive", "env"] }
uuid = { workspace = true, features = ["v4", "v5"] }
ai-brains-brain = { path = "../ai-brains-brain" }
ai-brains-scheduler = { path = "../ai-brains-scheduler" }
ai-brains-events = { path = "../ai-brains-events" }
ai-brains-core = { path = "../ai-brains-core" }
ai-brains-path = { path = "../ai-brains-path" }
tokio = { workspace = true }
rusqlite = { workspace = true }
dotenvy = { workspace = true }
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strip-ansi-escapes.workspace = true

[features]
default = []
graph = ["dep:ai-brains-graph"]

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
