[package]
name = "ai-brains-contracts"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ai-brains-core = { path = "../ai-brains-core", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
uuid.workspace = true
