[package]
name = "ai-brains-crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ai-brains-core = { path = "../ai-brains-core", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zeroize.workspace = true
rand.workspace = true
subtle.workspace = true
argon2.workspace = true
aes-gcm.workspace = true
base64.workspace = true
hex.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
