[package]
name = "ai-brains-events"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ai-brains-core = { path = "../ai-brains-core", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
time.workspace = true
sha2.workspace = true
hex.workspace = true
