[package]
name = "ai-brains-graph"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ai-brains-core = { path = "../ai-brains-core" }
ai-brains-events = { path = "../ai-brains-events" }
ai-brains-store = { path = "../ai-brains-store" }
ai-brains-contracts = { path = "../ai-brains-contracts" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tempfile.workspace = true

[dev-dependencies]
ai-brains-crypto = { path = "../ai-brains-crypto" }
