[package]
name = "ai-brains-retrieval"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ai-brains-core = { path = "../ai-brains-core" }
ai-brains-store = { path = "../ai-brains-store" }
ai-brains-graph = { path = "../ai-brains-graph", optional = true }
rusqlite = "0.32"
thiserror.workspace = true

[features]
default = []
graph = ["dep:ai-brains-graph", "ai-brains-graph/ladybug"]

[dev-dependencies]
ai-brains-crypto = { path = "../ai-brains-crypto" }
ai-brains-events = { path = "../ai-brains-events" }
tempfile = "3.10"
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0"
