[package]
name = "ai-brains-retrieval"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ai-brains-core = { path = "../ai-brains-core" }
ai-brains-store = { path = "../ai-brains-store" }
ai-brains-contracts = { path = "../ai-brains-contracts" }
ai-brains-graph = { path = "../ai-brains-graph", optional = true }
rusqlite.workspace = true
thiserror.workspace = true
strip-ansi-escapes.workspace = true
chrono = { workspace = true }
serde_json.workspace = true
tempfile.workspace = true

[features]
default = []
graph = ["dep:ai-brains-graph"]

[dev-dependencies]
ai-brains-crypto = { path = "../ai-brains-crypto" }
ai-brains-events = { path = "../ai-brains-events" }
tempfile.workspace = true
uuid = { workspace = true, features = ["v4"] }
serde_json.workspace = true
