[package]
name = "ai-brains-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ai-brains-core = { path = "../ai-brains-core", version = "0.1.0" }
ai-brains-events = { path = "../ai-brains-events", version = "0.1.0" }
ai-brains-crypto = { path = "../ai-brains-crypto", version = "0.1.0" }

rusqlite.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

