[package]
name = "ai-brainsd"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ai-brains-capture = { path = "../ai-brains-capture" }
ai-brains-contracts = { path = "../ai-brains-contracts" }
ai-brains-core = { path = "../ai-brains-core" }
ai-brains-crypto = { path = "../ai-brains-crypto" }
ai-brains-daemon-api = { path = "../ai-brains-daemon-api" }
ai-brains-events = { path = "../ai-brains-events" }
ai-brains-store = { path = "../ai-brains-store" }
ai-brains-retrieval = { path = "../ai-brains-retrieval" }
dirs = "5.0"
dotenvy = "0.15"
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
tracing = "0.1"
uuid.workspace = true
sha2 = "0.10"
chrono = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
